# todo-project

./: README.md  docker-compose.yaml  pyproject.toml
todo_app/: Dockerfile  app_run.sh
todo_app/todo_app/: settings.py  urls.py
todo_app/todos/: admin.py  models.py  serializers.py  urls.py  views.py
todo_app/todos/migrations/: 0001_initial.py  0002_remove_todotask_status_todotask_finished_and_more.py
